--- a/portfolio 3.html
+++ b/portfolio 3.html
@@ -26,27 +26,34 @@
     <h2>About Me</h2>
     <p>
         
-        Hello! I'm Brandon Godoy, a coding bootcamp student at Columbia University with a strong drive to become a senior developer. Despite being new to coding, I'm on a rapid learning trajectory. I'm highly dedicated and thrive in collaborative settings, where I can learn from experienced professionals while contributing fresh perspectives. My goal is to create impactful, user-centered software solutions.
-        
+        Hello! I'm Brandon Godoy, a coding bootcamp student at Columbia University with a strong drive to become a senior developer. Despite being new to coding, I'm on a rapid learning trajectory. I'm highly dedicated and thrive in collaborative settings, where I can learn from experienced professionals while contributing fresh perspectives. My goal is to create impactful, user-centered software solutions. languages HTML CSS JAVASCRIPT SQL MONGO DB NODE.JS
     </section>
 
   <section id="portfolio">
     <h2>Portfolio</h2>
     <div class="project">
       <h3>GETFLIX AND GRILL</h3>
+      <img src="c:\Users\Chiko\Pictures\Screenshots\Screenshot (250).png" alt="Codespace Logo">
       <p>
-        A description of your first project. Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit.
+        Is a food delivery and movie selector aplication designed to select and choose with precesion the perfect Take-out & Movie choice combo.
       </p>
     </div>
 
     <div class="project">
-      <h3>Project 2</h3>
-      <p>
-        A description of your second project. Nullam eget libero sed quam
-        fermentum dignissim.
+      <h3>RENT-A-TECH</h3>
+<img src="file:///C:/Users/Chiko/Pictures/lexus meeting/Screenshot (249).png" alt="Rent-a-Tech Logo">
+<p>
+  An application designed to offer on demand car service to comsumers and also a sign up serivce for mechanics to link with clientel to create a network of mobile mechaincs qualified to offer 5 star luxury hands free waiting roomless serivce at convenience.
       </p>
     </div>
+
+        <div class="project">
+          <h3>CODESPACE</h3>
+          <img src="https://i.ytimg.com/vi/_aU9gTLkFqE/maxresdefault.jpg" alt="Codespace Logo">
+          <p>
+            A social media style application designed to link coders with other coders. A place to understand other languages better if any problems in translation; this is where you find the answers. Also offering hackathons with chances to win money prizes and job opportunities.
+          </p>
+        </div>
 
 
   </section>
@@ -55,21 +62,7 @@
     <h2>Contact Me</h2>
     <p>
       If you'd like to get in touch with me, please feel free to email me at
-      <a href="mailto:youremail@example.com">youremail@example.com</a>.
+      <a href="mailto:trentokyo@gmail.com">trentokyo@gmail.com</a>.
     </p>
   </section>
 
-  <section id="resources">
-    <h2>Resources</h2>
-    <p>
-      Here are some useful resources for web development:
-      <ul>
-        <li><a href="#">Resource 1</a></li>
-        <li><a href="#">Resource 2</a></li>
-        <li><a href="#">Resource 3</a></li>
-      </ul>
-    </p>
-  </section>
-</body>
-
-</html>
